changed the scroll bug. still not fixed on ios

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -103,5 +103,5 @@ padding-top: 0px;
 }
 
 .content{
-	bottom:10px;
+	bottom:68px;
 }
